# hcontrol

./: .clang-format  .editorconfig  .flake8  .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  __main__.py  about  avrdude.conf  voltage_levels.vtc
algorithm/: filters.py
calibration/: logic.py
capture/: camera.py
controller/: README.md  sconscript
controller/src/: control.c  pin_layout.h
controls/: controller.py  gesture.py  location.py  tracking.py  tracking_base.py  types.py
daemon/: CMakeLists.txt  daemonize.cxx  daemonize.hxx  hcontrold-config.hxx  hcontrold.cxx
docs/: voltage_levels.vtc
performance/: diagfps.py  profile.py  profiler.py
tracking/: coordinates.py  points.py
tracking/exec/: CMakeLists.txt  HCExecController.cxx  HCExecController.hxx  HcConfig.hxx  HcCoordinates.cxx  HcCoordinates.hxx  HcPoints.hxx
tracking/exec/data/: MORE_ROTATION_COORDINATES.txt  ROTATION_COORDINATES.txt  SPANNING_COORDINATES.txt
trainer/: WORKING.txt  image.py  trainer.py
trainer/data/: MORE_ROTATION_COORDINATES.csv  ROTATION_COORDINATES.csv  SPANNING_COORDINATES.csv
trainer/jupyter/: pixel_values
trainer/jupyter/.ipynb_checkpoints/: Phi-HControl-checkpoint.ipynb
utils/: constants.py
